resources/ollama/04-ollama-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama
  namespace: ollama
spec:
  port:
    targetPort: 11434
  to:
    kind: Service
    name: ollama
    weight: 100
  wildcardPolicy: None
